actualizado los modelos de la base de datos
