# swagger.json
@@ -25,31 +25,47 @@
   "tags": [
     {
       "name": "customer",
-      "description": "Everything about your Pets",
+      "description": "all about customers",
       "externalDocs": {
         "description": "Find out more",
-        "url": "http://swagger.io"
+        "url": "https://localhost/api/v1/customer"
       }
     },
     {
       "name": "product",
-      "description": "Access to Petstore orders",
+      "description": "All products in the store",
       "externalDocs": {
         "description": "Find out more about our store",
-        "url": "http://swagger.io"
+        "url": "https://localhost/api/v1/products"
       }
     },
     {
       "name": "user",
-      "description": "Operations about user"
+      "description": "Operations about user",
+      "externalDocs": {
+        "description": "Find out more about our store",
+        "url": "https://localhost/api/v1/users"
+      }
     },
     {
       "name": "category",
-      "description": "Operations about user"
+      "description": "Operations about category",
+      "externalDocs": {
+        "description": "Find out more about our store",
+        "url": "https://localhost/api/v1/categories"
+      }
+    },
+    {
+      "name": "order",
+      "description": "Operations about user",
+      "externalDocs": {
+        "description": "Find out more about our store",
+        "url": "https://localhost/api/v1/order"
+      }
     }
   ],
   "paths": {
-    "/user": {
+    "/users": {
       "post": {
         "tags": [
           "user"
@@ -94,56 +110,12 @@
             }
           }
         }
-      }
-    },
-    "/user/createWithList": {
-      "post": {
-        "tags": [
-          "user"
-        ],
-        "summary": "Creates list of users with given input array",
-        "description": "Creates list of users with given input array",
-        "operationId": "createUsersWithListInput",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "array",
-                "items": {
-                  "$ref": "#/components/schemas/User"
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/User"
-                }
-              },
-              "application/xml": {
-                "schema": {
-                  "$ref": "#/components/schemas/User"
-                }
-              }
-            }
-          },
-          "default": {
-            "description": "successful operation"
-          }
-        }
-      }
-    },
-    "/user/login": {
+      },
       "get": {
         "tags": [
           "user"
         ],
-        "summary": "Logs user into the system",
+        "summary": "returns all users",
         "description": "",
         "operationId": "loginUser",
         "parameters": [
@@ -204,62 +176,18 @@
         }
       }
     },
-    "/user/logout": {
+    "/user/id": {
       "get": {
         "tags": [
           "user"
         ],
-        "summary": "Logs out current logged in user session",
+        "summary": "return one user",
         "description": "",
         "operationId": "logoutUser",
         "parameters": [],
         "responses": {
           "default": {
             "description": "successful operation"
-          }
-        }
-      }
-    },
-    "/user/{username}": {
-      "get": {
-        "tags": [
-          "user"
-        ],
-        "summary": "Get user by user name",
-        "description": "",
-        "operationId": "getUserByName",
-        "parameters": [
-          {
-            "name": "username",
-            "in": "path",
-            "description": "The name that needs to be fetched. Use user1 for testing. ",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/User"
-                }
-              },
-              "application/xml": {
-                "schema": {
-                  "$ref": "#/components/schemas/User"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid username supplied"
-          },
-          "404": {
-            "description": "User not found"
           }
         }
       },
